# plodai

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  alembic.ini  chat_feedback.py  custom_pytest.py  gunicorn.conf.py  index.html  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  release.py  requirements-dev.txt  requirements.txt  tsconfig.json  vite.config.ts
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: DatasetMetadata.py  __init__.py  agent_builder.py  capabilities.py  context.py  query_models.py  report_analyst.py  tools.py  widgets.py  workspace_file.py
backend/app/api/: routes.py
backend/app/chatkit/: __init__.py  agent_stream.py  attachment_payloads.py  batch_continuation.py  client_tools.py  feedback_types.py  memory_store.py  metadata.py  runtime_state.py  server.py  streaming.py  usage.py
backend/app/core/: auth.py  clerk_metadata.py  config.py  logging.py
backend/app/db/: schemas.py  session.py  startup_retry.py  types.py
backend/app/models/: advisory.py  chatkit.py  cost.py  credit.py  credit_grant.py  farm.py  free_credit_request.py  payment_attempt.py  registry.py  report.py  stored_file.py  types.py  user.py  workspace.py
backend/app/schemas/: advisory.py  advisory_semantic.py  agriculture_entities.py  auth.py  credits.py  farm.py  plodai_entities.py  report.py  stored_file.py  workspace.py
backend/app/services/: advisory_image_service.py  advisory_semantic_service.py  advisory_service.py  agriculture_entity_service.py  auth_service.py  bucket_storage.py  clerk_admin_service.py  clerk_auth_service.py  credit_service.py  document_pdf.py  farm_image_service.py  farm_service.py  free_credits.py  payments.py  plodai_entity_service.py  public_farm_order_service.py  report_service.py  stored_file_service.py  upload_rules.py  workspace_service.py
backend/app/static/: .gitkeep  index.html
backend/app/static/assets/: index-DFYpyGjE.js
backend/dev-certs/: README.md  dev-cert.pem  dev-key.pem
backend/scripts/: release.py
backend/tests/: conftest.py  fake_bucket_storage.py  test_advisory_semantic_service.py  test_agent_builder.py  test_agent_tools.py  test_agriculture_entity_service.py  test_api_routes.py  test_auth.py  test_batch_continuation.py  test_bucket_storage.py  test_chatkit_attachments.py  test_chatkit_image_inputs.py  test_chatkit_integration.py  test_chatkit_server_actions.py  test_chatkit_tool_progress.py  test_chatkit_transcription.py  test_client_tool_output.py  test_client_tool_proxy_widgets.py  test_config.py  test_database_startup_retry.py  test_document_pdf.py  test_farm_service.py  test_feedback_types.py  test_feedback_widgets.py  test_health.py  test_logging.py  test_migrations.py  test_model_resolution.py  test_plan_execution.py  test_plan_execution_server.py  test_plodai_entity_service.py  test_public_farm_order_service.py  test_query_models.py  test_runtime_state.py  test_stored_file_service.py  test_thread_metadata.py  test_tool_request_summaries.py  test_workspace_service.py
blog/: __init__.py
blog/15-03-2026-ai-and-the-old-gods/: agents.md  article.md  metadata.json
blog/15-03-2026-ai-and-the-old-gods-technical/: article.md  metadata.json
blog/15-03-2026-the-theoretical-justification-of-neural-networks/: article.md  metadata.json
blog/ai-and-the-old-gods/: article.md
blog/scripts/: __init__.py  artifact_common.py  mlp_story_artifacts.py  neural_dynamics_artifacts.py  precision_story_artifacts.py  rnn_fractal_demo.py  (+4 more)
e2e/: auth.setup.ts  fire.spec.ts  global-setup.ts
frontend/: .env.example  check-required-env.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: env.py
notes/: __init__.py
src/: App.tsx
tests/: test_neural_dynamics_artifacts.py  test_rnn_fractal_demo.py
walnut_test_images/: ai-portfolio - Shortcut.lnk
(+370 files in other folders)
