[project]
name = "plodai-backend"
version = "1.1.3"
description = "FastAPI backend for the PlodAI farm operations workspace."
requires-python = ">=3.14"
dependencies = [
  "ai-portfolio-admin @ file:vendor/ai-portfolio-admin",
  "aiosqlite",
  "clerk-backend-api",
  "email-validator",
  "fastapi",
  "httpx",
  "minio",
  "openai",
  "openai-agents",
  "openai-chatkit",
  "pillow",
  "colorlog",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true

[tool.ruff.lint]
fixable = ["F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
