[project]
name = "plodai-backend"
version = "2.1.1"
description = "FastAPI runtime for Report Foundry agent demos."
requires-python = ">=3.14"
dependencies = [
  "ai-portfolio-admin @ file:./vendor/ai-portfolio-admin/",
  "alembic",
  "aiosqlite",
  "asyncpg",
  "clerk-backend-api",
  "email-validator",
  "fastapi",
  "httpx",
  "minio",
  "openai",
  "openai-agents",
  "openai-chatkit",
  "pillow",
  "pypdf",
  "colorlog",
  "pydantic-settings",
  "python-multipart",
  "psycopg[binary]",
  "sqlalchemy",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true

[tool.ruff.lint]
fixable = ["F401"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = [".", "vendor/ai-portfolio-admin/src"]
markers = [
  "no_db: test does not need the autouse database reset fixture",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
